<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardCornerRadius="@dimen/corner_radius"
        app:cardElevation="@dimen/card_elevation"
        android:padding="@dimen/sender_chat_padding_allside"
        android:layout_margin="@dimen/margin_allside">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="@dimen/sender_chat_padding_allside">
                <TextView
                    android:id="@+id/tv_sName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/student_name"
                    android:textColor="@color/black_color"
                    android:layout_gravity="start"/>
                <TextView
                    android:id="@+id/tv_name_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="@dimen/margin_top"
                android:padding="@dimen/sender_chat_padding_allside">
                <TextView
                    android:id="@+id/tv_sage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/student_age"
                    android:textColor="@color/black_color"
                    android:layout_gravity="start"/>
                <TextView
                    android:id="@+id/tv_age_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/textView"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>